# innomightlabs-dynamic-agent-builder

./: .env.example  .gitignore  LOCAL_DYNAMODB.md  PAYMENTS_REVIEW.md  README.md  docker-compose.local.yml
api/: Dockerfile  Dockerfile.railway  README.md  main.py  pyproject.toml  railway.toml  usage_stream_handler.py
api/docs/: BLOG-openai-oauth-codex-integration.md  LLD-agent-marketplace.md  LLD-async-automation-test-run.md  LLD-async-tool-runtime.md  LLD-automation-marketplace.md  LLD-automation-run-heartbeats.md  LLD-automation-skill-actions.md  LLD-automations-module.md  LLD-durable-agent-orchestration.md  LLD-google-drive-skill-v1.md  LLD-google-mail-skill-actions.md  LLD-html-report-skill.md  LLD-league-insights-html-report-skill.md  LLD-memory-block-user-scoping.md  LLD-multimodal-image-generation-v1.md  LLD-openai-oauth-provider.md  LLD-plugin-downloads-release.md  LLD-railway-api-migration.md  LLD-rest-template-skill.md  LLD-scheduler-architecture.md  LLD-tool-command-execution.md  LLD-unified-skill-automation-actions.md  LLD-upload-file-artifact-skill.md
api/lambdas/: __init__.py
api/lambdas/account_deletion_handler/: handler.py
api/lambdas/stripe_events_handler/: __init__.py  (+2 more)
api/scripts/: DELETE_USER_ACCOUNT_README.md  UPDATE_LAMBDA_ENV_README.md  aws-cost-breakdown.sh  delete_user_account.py  deploy.sh  init_local_dynamodb.py  stripe_pricing_sync.py  update_lambda_env_prod.sh
api/src/: crypto.py  exceptions.py  form_models.py  form_options.py  form_validation.py  logging_config.py
api/terraform/: api_gateway.tf  docker_build.tf  dynamodb.tf  lambda.tf  outputs.tf  providers.tf  variables.tf
api/tests/: conftest.py  mock_data.py  test_agent_architecture_base.py  test_agent_image_capabilities.py  test_agent_image_generation_service.py  test_agent_image_provider.py  test_agent_image_storage.py  test_agent_marketplace.py  test_agentic_loop.py  test_agents_repository.py  test_agents_router.py  test_analytics_router.py  test_analytics_service.py  test_apikeys.py  test_artifacts.py  test_async_job_dispatch.py  test_async_tool_runtime.py  test_automation_marketplace.py  test_automations_models.py  test_automations_repository.py  test_automations_router.py  test_automations_runner.py  test_automations_service_validation.py  test_checkout_validation.py  test_connectors_router.py  test_conversation_strategy.py  test_conversations_repository.py  test_conversations_router.py  test_crypto.py  test_downloads_router.py  test_form_options.py  test_google_drive_oauth.py  test_google_drive_skill_actions.py  test_google_mail_oauth.py  test_google_mail_skill_actions.py  test_http_executor.py  test_in_memory_message_repository.py  test_json_utils.py  test_krishna_memgpt_prompt.py  test_krishna_memgpt_tool_audit.py  (+34 more)
(+692 files in other folders)
