[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stripe==14.2.0",
    "boto3>=1.42.25",
    "boto3-stubs[dynamodb]>=1.42.25",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "google-auth>=2.47.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "mangum>=0.20.0",
    "mypy>=1.19.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    # Crawler dependencies
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.14.1",
    # Vector store dependencies
    "pinecone>=5.0.0",
    "anthropic>=0.76.0",
    # Email service
    "mailjet-rest>=1.3.4",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "moto[dynamodb]>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
# Disable errors for async generator/iterator patterns and complex type assignments
disable_error_code = ["override", "attr-defined", "dict-item", "assignment"]

[dependency-groups]
dev = [
    "moto>=5.1.19",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
